welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:40: error: '<-' expected but ')' found.
for (j < 1 to 3)
               ^PictureMono2:48: error: illegal start of simple expression
}
^