welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {
def faireMotif()
{
	co1();
	co2();
	co1();
	co2();
	co1();
	miseNiveau;
}

def point()
{
	baisseBrosse();
	leveBrosse();
}

def co1()
{
	gauche; avance;
	point;
	avance; avance;
	point;
	avance; droite;avance;
}

def co2 ()
{
	point; droite; avance; avance; point; avance;avance; point;gauche; avance;
}
def miseNiveau
{
	droite; avance;avance;avance;avance; gauche;
}
faireMotif
var i =0
var j =0 

for (j < 1 to 3)
{
	for (i <- 1 to 3)
	{
		faireMotif
	}
	miseNiveau;
}
}
